--- a/css/style.css
+++ b/css/style.css
@@ -56,7 +56,6 @@ header {
 }
 
 .nav-logo{
-    padding: 0 150px;
     cursor: pointer;
 }
 
@@ -65,43 +64,22 @@ header {
     justify-content: space-between;
     align-items: center;
     gap: 20px;
-    margin: 0px auto;   
-    /* max-width: 1200px;
-    line-height: 80px; */
+    margin: auto;   
+    max-width: 1200px;
+    line-height: 80px;
     z-index: 1000;
 }
 
-nav{
-    display: flex;
-    padding: 0 150px;
-    gap: 50px;
-}
-
-.nav-button{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-weight: bold;
-    background: red;
-    color: blue;
-    padding: 10px;
-    border-radius: 10px;
-}
-.nav-button:hover{
-    background: blue;
-    color: red;
-}
 .nav-list{
     display: flex;
     justify-content: center;
-    margin: 0 auto;
+    margin: auto;
     max-width: 1000px;
     z-index: 1000;
 }
 
 .nav-link a{
     color: #FFFFFF;
-    font-weight: bold;
     letter-spacing: 3px;
     transition: .3s;
 }
@@ -123,9 +101,7 @@ nav{
     transform: rotate(180deg);
 }
 
-/* navbar style */
 
-/* footer style */
-/* footer{
-    background: linear-gradient(to right, blue, red);
-}*/
+
+
+
