--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,19 @@
     color: #000000;
 }
 
+:root{
+    --orange: #E67E37;
+    --rose: #F09F8E;
+    --pink: #E2609E;
+    --white: #F2EEEB;
+    --blue: #3468B1;
+    --lightgrey: #B2D5CE;
+    --grey: #06685B;
+    --yellow: #E4DB3E;
+    --green: #03685A;
+    --lightpink: #E8A1B3;
+}
+
 .visible{
     display: flex !important;
     visibility: visible !important;
@@ -19,6 +32,8 @@
     display: none !important;
     visibility: hidden !important;
 }
+
+/*---- Float Buttons ----*/
 
 .btnWsp{
     position: fixed;
@@ -37,6 +52,44 @@
     z-index: 100;
 }
 
+.store{
+    position: fixed;
+    line-height: 64px;
+    top: 170px;
+    right: -240px;
+    background-color: var(--yellow);
+    border-radius: 50px;
+    padding: 0px 16px;
+    text-align: center;
+    width: 300px;
+    font-size: 25px;
+    z-index: 1800;
+    cursor: pointer;
+    transition: all .5s;
+}
+.store a{
+    color: var(--yellow);
+}
+.store i{
+    color: var(--pink);
+    margin-right: 70px;
+    transition: all .5s;
+}
+.store:hover{
+    transform: translate(-240px, 0);
+    color: var(--yellow);
+    background-color: var(--pink);
+    transition: ease-in-out .5s;
+}
+.store:hover i, .store:hover a{
+    color: var(--yellow);
+    background-color: var(--pink);
+    transition: ease-in-out .5s;
+    transform: rotate(360deg);
+}
+
+/*---- Float Buttons ----*/
+
 .repair{
     display: flex;
     margin: 0 auto;
@@ -44,9 +97,9 @@
     margin: 130px auto 30px auto;
 }
 
-/* navbar style */
+/*---- navbar style ----*/
 header {
-    background: #cacaca;
+    background: var(--lightgrey);
     height: 100px;
     position: fixed;
     width: 100%;
@@ -58,13 +111,16 @@ header {
 .nav-logo{
     cursor: pointer;
 }
+.nav-logo img{
+    width: 25%;
+}
 
 .container-navbar{
     display: flex;
     justify-content: space-between;
     align-items: center;
     gap: 20px;
-    margin: auto;   
+    margin: -15px auto;   
     max-width: 1200px;
     line-height: 80px;
     z-index: 1000;
@@ -79,17 +135,18 @@ header {
 }
 
 .nav-link a{
-    color: #FFFFFF;
+    color: #000000;
+    /* font-weight: bold; */
     letter-spacing: 3px;
     transition: .3s;
 }
 
 .nav-link a:hover{
-    color: #000000;
+    color: var(--orange);
 }
 
 .nav-toggle{
-    color: #FFFFFF;
+    color: #000000;
     font-size: 30px;
     transform: rotate(90deg);
     cursor: pointer;
@@ -101,7 +158,125 @@ header {
     transform: rotate(180deg);
 }
 
+/*---- Navbar Style ----*/
+
+section{
+    margin: 120px auto;
+}
+
+.tittle{
+    margin: 120px auto 50px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+/*---- Company Style ----*/
+
+.company{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+}
+.company article{
+    width: 50%;
+}
+
+/*---- Company Style ----*/
+
+
+/*---- Products Style ----*/
+.products{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.img-products{
+    margin: 0 auto;
+    text-align: center;
+}
+.img-products img{
+    width: 40%;
+}
+/*---- Products Style ----*/
 
 
 
+/*---- Contact Style ----*/
+#contact{
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: space-around;
+    align-items: center;
+}
 
+form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    width: 45%;
+}
+
+.label{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.label img{
+    background-color: #807d7e70;
+    border-radius: 5px;
+    padding: 1%;
+}
+.label input{
+    width: 100%;
+    border-radius: 5px;
+    box-shadow: 2px 2px #00000048;
+    padding: 1%;
+}
+
+form textarea{
+    width: 100%;
+    height: 120px;
+    box-shadow: 2px 2px #00000048;
+    padding: 1%;
+}
+
+form button{
+    display: flex;
+    padding: 2%;
+    border-radius: 8px;
+    background-color: #cfbbc5;
+    color: #000000;
+    font-weight: bold;
+    margin: auto;
+    cursor: pointer;
+}
+
+
+/*---- Contact Style ----*/
+
+
+
+/*---- Footer Style ----*/
+
+
+footer{
+    background-color: #b2d5ced2;
+}
+.copyright{
+    background-color: var(--lightgrey);
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+}
+.copyright a, .copyright p{
+    color: #000000 !important;
+
+}
+.btn i{
+    color: #000000 !important;
+}
+
+/*---- Footer Style ----*/
