--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
     text-decoration: none;
     scroll-behavior: smooth;
     scroll-padding-top: 100px;
-    /* font-family: 'Josefin Sans', sans-serif; */
     color: #000000;
 }
 
@@ -230,30 +229,37 @@ form{
     gap: 10px;
 }
 .label img{
-    background-color: #807d7e70;
+    background: var(--yellow);
     border-radius: 5px;
     padding: 1%;
 }
 .label input{
     width: 100%;
     border-radius: 5px;
-    box-shadow: 2px 2px #00000048;
+    box-shadow: 3px 3px var(--pink);
+    border: none !important;
     padding: 1%;
 }
 
 form textarea{
     width: 100%;
     height: 120px;
-    box-shadow: 2px 2px #00000048;
+    box-shadow: 3px 3px var(--pink);
     padding: 1%;
+}
+
+form input::placeholder, textarea::placeholder{
+    color: var(--orange);
+    font-weight: 500;
 }
 
 form button{
     display: flex;
     padding: 2%;
     border-radius: 8px;
-    background-color: #cfbbc5;
+    background: var(--yellow);
     color: #000000;
+    border: none !important;
     font-weight: bold;
     margin: auto;
     cursor: pointer;
