--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ section{
     flex-wrap: wrap;
     gap: 30px;
 }
-.img-products img{
+/* .img-products img{
     width: 30%;
     height: 40vh;
     border: 4px solid var(--pink);
@@ -237,7 +237,7 @@ section{
     transform: scale(1.2);
     transition: all .5s;
     cursor: pointer;
-}
+} */
 /*---- Products Style ----*/
 
 
