--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,8 @@ form textarea{
     height: 120px;
     box-shadow: 3px 3px var(--pink);
     padding: 1%;
+    border-radius: 5px;
+    border: none !important;
 }
 
 form input::placeholder, textarea::placeholder{
