--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,70 @@ font-family: 'Signika Negative', sans-serif;
     visibility: hidden !important;
 }
 
+.headline{
+    background: linear-gradient(-160deg, var(--pink), var(--orange)) !important;
+    width: 100%;
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover !important;
+    z-index: 0;
+}
+.logo-slogan{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    margin: 0 auto;
+    padding: 20px;
+}
+.logo-slogan img{
+    width: 45%;
+    transform: rotate(-15deg);
+}
+.logo-spin{
+    transition: all .5s;
+    transform: rotate(360deg) !important;
+}
+.logo-spin2{
+    transition: all .5s;
+    transform: rotate(-360deg) !important;
+}
+.logo-slogan span{
+    width: 37%;
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--yellow);
+}
+
+.text-home{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    margin: -150px 150px;
+    padding: 30px;
+    gap: 30px;
+    color: var(--yellow);
+}
+
+.text-home h1{
+    color: var(--yellow);
+    font-weight: bold;
+    font-family: 'Nova Round', cursive;
+}
+.text-home h6{
+    color: var(--yellow);
+    font-size: 14px;
+    font-family: 'Nova Round', cursive;
+}
+.text-home h5{
+    color: var(--yellow);
+    font-size: 14px;
+    font-family: 'Nova Round', cursive;
+}
+
+
 /*---- Float Buttons ----*/
 
 .btnWsp{
@@ -315,20 +379,21 @@ form button{
 
 
 footer{
-    background-color: #b2d5ced2;
+    background: linear-gradient(-160deg, var(--pink), var(--orange)) !important;
 }
 .copyright{
-    background-color: var(--lightgrey);
+    background: linear-gradient(-160deg, var(--pink), var(--orange)) !important;
+    border-top: 2px solid var(--lightpink);
     display: flex;
     justify-content: center;
     gap: 10px;
 }
 .copyright a, .copyright p{
-    color: #000000 !important;
+    color: var(--yellow) !important;
 
 }
 .btn i{
-    color: #000000 !important;
+    color: var(--yellow) !important;
 }
 
 /*---- Footer Style ----*/
